--- a/src/Component/Collapsable.css
+++ b/src/Component/Collapsable.css
@@ -35,7 +35,7 @@
 }
 .content-show {
   margin-top: 20px;
-  height: 500px;
+  height: 300px;
   transition: height ease 0.3s;
 }
 
@@ -86,6 +86,8 @@
   margin-bottom: 10px;
 }
 .table-data {
+  border-radius: 10px 10px 10px 10px;
+  overflow: hidden;
   width: 100%;
   text-align: center;
   border-collapse: collapse;
@@ -115,4 +117,26 @@ td {
   border: none;
   border-radius: 20px 20px 20px 20px;
   background-color: #ffffff;
+}
+.btn-dropdown {
+  margin-left: 5px;
+  color: #1877f2;
+  height: 35px;
+  width: 10%;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 25px 25px 25px 25px;
+  background-color: #f0f2f5;
+  border: none;
+}
+.dropdown-item {
+  height: min-content;
+  margin: 10px;
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: #f0f2f5;
+  border-radius: 20px 20px 20px 20px;
+  overflow: hidden;
+  padding: 10px;
+  color: #1877f2;
+  text-align: center;
+  width: 10%;
 }
