--- a/src/Component/Collapsable.css
+++ b/src/Component/Collapsable.css
@@ -122,7 +122,7 @@ td {
   margin-left: 5px;
   color: #1877f2;
   height: 35px;
-  width: 10%;
+  width: 35px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.2);
   border-radius: 25px 25px 25px 25px;
   background-color: #f0f2f5;
@@ -137,6 +137,16 @@ td {
   overflow: hidden;
   padding: 10px;
   color: #1877f2;
+  text-align: center;
+}
+.dropdown-parent {
+  position: absolute;
+  margin: 10px;
+  box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
+  background-color: #ffffff;
+  border-radius: 20px 20px 20px 20px;
+  overflow: hidden;
+  padding: 10px;
   text-align: center;
   width: 10%;
 }
