--- a/src/Component/Collapsable.css
+++ b/src/Component/Collapsable.css
@@ -116,7 +116,30 @@ td {
   height: 30px;
   border: none;
   border-radius: 20px 20px 20px 20px;
-  background-color: #ffffff;
+  background-color: transparent;
+}
+.btn-remove:hover {
+  cursor: pointer;
+  color: #830a0a;
+}
+.btn-edit {
+  margin-left: 10px;
+  text-align: center;
+  font-size: 15px;
+  width: 30px;
+  padding: 5px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 650;
+  color: #2fbdff;
+  text-align: center;
+  height: 30px;
+  border: none;
+  border-radius: 20px 20px 20px 20px;
+  background-color: transparent;
+}
+.btn-edit:hover {
+  cursor: pointer;
+  color: #830a0a;
 }
 .btn-dropdown {
   margin-left: 5px;
@@ -142,6 +165,7 @@ td {
 .dropdown-parent {
   position: absolute;
   margin: 10px;
+  height: 200px;
   box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: #ffffff;
   border-radius: 20px 20px 20px 20px;
@@ -149,4 +173,7 @@ td {
   padding: 10px;
   text-align: center;
   width: 10%;
+}
+.dropdown-parent li {
+  list-style: none;
 }
